@@ -8,6 +8,6 @@ repository = "https://github.com/rory/rust-wkb"
 license = "AGPL-3.0+"
 
 [dependencies]
-geo-types = "0.5"
+geo-types = "0.6"
 byteorder = "1"
 num-traits = "0.2.6"
